Version 0.10.0 (2014-03-XX)
---------------------------
Created new Tracker Protocol sub-project (#550)
Selected and integrated a JSON schema validation tool into the sub-project (#551) (TODO)
Implemented Grunt(#552) (TODO)
Implemented Intern(#553) (TODO)
Added ad impression JSON schema and tests (#554) (TODO)
Added ad click JSON schema and tests (#556) (TODO)
Added ad conversion JSON schema and tests (#556) (TODO)
Added JSON schema and tests to tracker-protocol (#557) (TODO)

Version 0.9.1 (2014-04-11)
--------------------------
Scala Hadoop Enrich: bumped to 0.4.0
Scala Hadoop Enrich: bumped to Scala Common Enrich 0.3.0 (#497)
Scala Hadoop Enrich: renamed AnonQuartets to AnonOctets (#498)
Scala Hadoop Enrich: renamed all Snowplow Hadoop Tests to Specs (#515)
Scala Hadoop Enrich: added page_url and page_referrer back into ETL's output (#483)
Scala Common Enrich: bumped to 0.3.0
Scala Common Enrich: bumped Argonaut to 6.0.3 (#620) 
Scala Common Enrich: added app and mob as valid platform codes, thanks @kinabalu! (#524)
Scala Common Enrich: added support for remaining platform codes (#516)
Scala Common Enrich: updated POJO in Scalding ETL to include new unstructured fields (#362)
Scala Common Enrich: updated POJO in Scalding ETL to include name_tracker field (#595)
Scala Common Enrich: extract evn from Tracker Protocol (#604)
Scala Common Enrich: extract tna from Tracker Protocol (#616)
Scala Common Enrich: extract and validate unstructured events (#142)
Scala Common Enrich: extract and validate custom contexts (#426)
Scala Common Enrich: reformat incoming event and context JSONs (#589) 
Scala Common Enrich: make sure to error a JSON if > length (#567)
EmrEtlRunner: bumped to 0.6.0
EmrEtlRunner: bumped Elasticity to 3.0.2 (#587)
EmrEtlRunner: allowed AWS VPC selection in EmrEtlRunner (#581)
EmrEtlRunner: set :visible_to_all_users to true for EMR jobs, thanks @smugryan! (#560)
Redshift: atomic-def script bumped to 0.3.0